with tests & dockrize